Fixed header padding and flex align

--- a/css/styles.css
+++ b/css/styles.css
@@ -33,15 +33,15 @@ ul {
 
  header {
     background-color:steelblue;
-    padding-bottom: 10px;
-    margin-bottom: 10px;
+    padding: 8px 0 0px 0;
+    margin: 0;
+    
 }
 
 h1 {
     font-family: 'Oswald', sans-serif;
-    padding: 20px 20px;
-    margin-top: 0;
     color: white;
+    padding: 10px 20px;
 }
 
 h2 {
@@ -52,10 +52,13 @@ h2 {
     text-decoration: none;
     background-color:white ;
     color: steelblue;
-    padding: 10px 20px;
     text-align: center;
+    padding: 10px 20px;
 }
+.main-nav {
+    padding: 10px 20px;
 
+}
 nav li {
     margin: 6px 6px;
     padding: 5px 10px;
@@ -101,6 +104,14 @@ footer {
 
  @media (min-width: 768px) {
 
+    #header-buttons {
+        display: flex;
+        flex-direction: row;
+        align-self: flex-end;
+    }
+#name {
+        margin-right: auto;
+}
     nav ul {
         display: flex;
         text-align: center;
@@ -140,17 +151,18 @@ footer {
 
  }
  @media (min-width: 1024px) {
+
+    .main-nav {
+        display: flex;
+        flex-direction: row;
+        align-content: space-between;
+    }
+
     .portfolio-items li {
         width: 33%;
     }
     #to-top {
         display: none;
-    }
-    header {
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: row;
-        justify-content: space-between;
     }
  }
 }
